--- a/log4j.properties
+++ b/log4j.properties
@@ -39,7 +39,7 @@ log4j.appender.socketAppender.locationInfo=true
 # NOTE: altering the ConversionPattern will cause a portion of the AdminTool's Log Viewer module to stop working properly
 log4j.appender.fileAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileAppender.File=logs/smartfox.log
+log4j.appender.fileAppender.File=logs/magic_trace.log
 log4j.appender.fileAppender.layout.ConversionPattern=%d{dd MMM yyyy | HH:mm:ss,SSS} | %-5p | %t | %c{3} | %3x | %m%n
 log4j.appender.fileAppender.Encoding=UTF-8
 
