--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>studio.itpex.apps</groupId>
   <artifactId>magic-trace</artifactId>
@@ -19,6 +18,12 @@
       <version>5.4</version>
     </dependency>
     <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.36</version>
@@ -33,12 +38,24 @@
       <artifactId>gson</artifactId>
       <version>2.8.5</version>
     </dependency>
+    <dependency>
+      <groupId>sodhium-commons</groupId>
+      <artifactId>sodhium-commons</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>sodhium-commons</groupId>
+      <artifactId>sodhium-commons-img</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
-    <repositories>
-        <repository>
-            <id>dcm4che</id>
-            <name>dcm4che</name>
-            <url>https://www.dcm4che.org/maven2/</url>
-        </repository>
-    </repositories>
+  <repositories>
+    <repository>
+      <id>dcm4che</id>
+      <name>dcm4che</name>
+      <url>https://www.dcm4che.org/maven2/</url>
+    </repository>
+  </repositories>
 </project>
